--- a/index.html
+++ b/index.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Sign Up</title>
-    <link rel="icon" href="favicon.ico" type="image/icon type">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    </head>
-  <body>
 
-<section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+<head>
+  <meta charset="utf-8">
+  <title>Sign Up</title>
+  <link rel="icon" href="favicon.ico" type="image/icon type">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-            <div class="mb-md-5 mt-md-4 pb-5">
+<body>
 
-              <h2 class="fw-bold mb-2 text-uppercase">SIGN UP</h2>
-              <p class="text-white-50 mb-5">Please enter your email, name and password!</p>
+  <section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card text-black card-bg" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
 
-              <div class="form-outline form-white mb-4">
-              <label class="form-label" for="typeEmailX">Email</label>
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+              <div class="mb-md-5 mt-md-4 pb-5">
+
+                <h2 class="fw-bold mb-2 text-uppercase">SIGN UP</h2>
+                <p class="text-black-50 mb-5">Please enter your email, name and password!</p>
+
+                <div class="form-outline form-black mb-4">
+                  <label class="form-label" for="typeEmailX">Email</label>
+                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                </div>
+
+                <div class="form-outline form-black mb-4">
+                  <label class="form-label" for="typeUserX">User</label>
+                  <input type="text" id="typeEmailX" class="form-control form-control-lg" />
+                </div>
+
+                <div class="form-outline form-black mb-4">
+                  <label class="form-label" for="typePasswordX">Password</label>
+                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                </div>
+                <br>
+
+                <select class="form-select form-outline form-black mb-4 drop" aria-label="Default select example">
+                  <option selected>Role</option>
+                  <option value="1">Admin</option>
+                  <option value="2">Supervisor</option>
+                  <option value="3">User</option>
+                </select>
+                <br>
+
+                <button class="btn btn-outline-dark btn-lg px-5" type="submit">SIGN UP</button>
+
               </div>
-
-              <div class="form-outline form-white mb-4">
-              <label class="form-label" for="typeUserX">User</label>
-                <input type="text" id="typeEmailX" class="form-control form-control-lg" />
-              </div>
-
-              <div class="form-outline form-white mb-4">
-              <label class="form-label" for="typePasswordX">Password</label>
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-              </div>
-
-
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">SIGN UP</button>
 
             </div>
-
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-  </body>
+  </section>
+</body>
+
 </html>
